# napi-introduction

./: README.md
.vscode.example/: c_cpp_properties.json  launch.json
napi-c/: CMakeLists.txt  README.md  index.js  package-lock.json  package.json
napi-c/src/: module.c
napi-cc/: CMakeLists.txt  README.md  package-lock.json  package.json
napi-cc/src/: module.cc
napi-mersenne-twister/: CMakeLists.txt  README.md  index.js  index.test.js  measurements.html  package-lock.json  package.json
napi-mersenne-twister/measurements/: measurement-2018-12-22T19:28:43.583Z.json  measurement-2018-12-22T19:44:50.982Z.json  measurement-2018-12-22T20:33:25.233Z.json  measurement-2018-12-22T20:41:47.117Z.json
napi-mersenne-twister/src/cc/: mersenne-twister-chatty-wrap.cc  mersenne-twister-chatty-wrap.h  mersenne-twister-wrap.cc  mersenne-twister-wrap.h  mersenne-twister.h  module.cc
napi-mersenne-twister/src/js/: mersenne-twister.js
